--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/dephil29/connect4/issues"
   },
-  "homepage": "https://github.com/dephil29/connect4#readme"
+  "homepage": "https://github.com/dephil29/connect4#readme",
+  "dependencies": {
+    "express": "^4.16.1",
+    "bootstrap": "*"
+  }
 }
