--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connect4",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "browserify js/main.js -o bundle.js",
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browserify": "^14.3.0",
+    "browserify": "^14.4.0",
     "watchify": "^3.9.0"
   },
   "bugs": {
@@ -24,7 +24,10 @@
   },
   "homepage": "https://github.com/dephil29/connect4#readme",
   "dependencies": {
+    "bootstrap": "*",
     "express": "^4.16.1",
-    "bootstrap": "*"
+    "socket.io": "^2.0.3",
+    "uuid": "^3.1.0",
+    "verbose": "^0.2.3"
   }
 }
